# recipe-creator

./: CONTRIBUTING.md  Dockerfile.agent  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: build-and-push.yml
docs/: index.md  modules.md
recipe_creator/: __init__.py  __main__.py  __version__.py  agent_config.json  main.py
recipe_creator/skills/recipe-creator/: skill.yaml
tests/: test_main.py
